--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 annotated-types==0.6.0
 anyio==4.3.0
+astroid==3.1.0
+autopep8==2.0.4
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+dill==0.3.8
 exceptiongroup==1.2.0
 fastapi==0.110.0
 h11==0.14.0
@@ -10,10 +13,17 @@ httpcore==1.0.4
 httpx==0.27.0
 idna==3.6
 iniconfig==2.0.0
+isort==5.13.2
+mccabe==0.7.0
+mypy==1.8.0
+mypy-extensions==1.0.0
 packaging==23.2
+platformdirs==4.2.0
 pluggy==1.4.0
+pycodestyle==2.11.1
 pydantic==2.6.2
 pydantic_core==2.16.3
+pylint==3.1.0
 pytest==8.0.2
 pytest-asyncio==0.23.5
 python-dotenv==1.0.1
@@ -21,6 +31,7 @@ requests==2.31.0
 sniffio==1.3.1
 starlette==0.36.3
 tomli==2.0.1
+tomlkit==0.12.4
 typing_extensions==4.10.0
 urllib3==2.2.1
 uvicorn==0.27.1
